<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="30dp">
            <ImageView
                android:contentDescription="@string/desc_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:fontFamily="serif"
            android:textSize="40sp"
            android:textFontWeight="700"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:text="@string/login_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textFontWeight="500"
        android:layout_marginTop="25sp"
        android:textStyle="italic"
        android:layout_marginBottom="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/account_icn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/account"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/account_icn_dec"
            />
        <EditText
            android:textColor="@color/black"
            android:id="@+id/inp_account"
            android:labelFor="@id/account_icn"
            android:inputType="text"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:textFontWeight="800"
            style="@style/Input.Rounded"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/key_icn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/key"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/password_inc_desc"
            />
        <EditText
            android:textColor="@color/black"
            android:id="@+id/inp_psw"
            android:labelFor="@id/key_icn"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:fontFamily="serif"
            android:textFontWeight="800"
            style="@style/Input.Rounded"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        style="@style/Button.Orange"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:fontFamily="serif"
        android:text="@string/login_msg"
        android:textColor="@color/orange"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/password_recovery"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forgot_password_msg"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:fontFamily="serif"
        android:textSize="20sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/google_login"
        style="@style/Input.Rounded"
        android:textFontWeight="800"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:drawableStart="@drawable/google_icon"
        android:drawablePadding="40sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="serif"

            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_msg" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/register_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_msg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>